tests/lean/1240.lean.expected.out

1240.lean:4:0-5:64: error: import failed, trying to import module with anonymous name
